Fixed LinkedIn keys

--- a/config/application.yml
+++ b/config/application.yml
@@ -11,6 +11,6 @@
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
 
-LINKEDIN_KEY: 77zbzyhjei6byz
+LINKEDIN_KEY: 77zo20cez710nf
 
-LINKEDIN_SECRET: TaNF5joY1BibXQKU
+LINKEDIN_SECRET: xOfrD0aQWuMLC0Ey
